기능변경: writer data 변경
